Fix flash messages being too wide

--- a/web/src/styles/index.scss
+++ b/web/src/styles/index.scss
@@ -19,6 +19,7 @@ body {
 	margin: 0 auto;
 	width: 100%;
 	top: 5rem;
+	padding: 0 0.75rem;
 
 	z-index: 99;
 }
